fix runtime fix runtime

--- a/nlp-service/requirements.txt
+++ b/nlp-service/requirements.txt
@@ -1,3 +1,4 @@
+# Note: spaCy NER is auto-disabled in app code on Python 3.14+; fully enabled on Python 3.13 or below.
 fastapi
 uvicorn[standard]
 pymupdf
